--- a/css/code-pretty.css
+++ b/css/code-pretty.css
@@ -1,9 +1,9 @@
 .com { color: #93a1a1; }
 .lit { color: #195f91; }
-.pun, .opn, .clo { color: #93a1a1; }
+.pun, .opn, .clo { color: #444444; }
 .fun { color: #dc322f; }
 .str, .atv { color: #D14; }
-.kwd, .linenums .tag { color: #1e347b; }
+.kwd, .prettyprint .tag { color: #1e347b; }
 .typ, .atn, .dec, .var { color: teal; }
 .pln { color: #48484c; }
 
